# poisson_lib

./: CMakeLists.txt  LICENSE  README.md  compilePoisson.sh
src/: CMakeLists.txt  poisson.cc  poisson.h  poisson_d2.cc  poisson_d3.cc
src/pkgconfig/: poisson.pc.in
test/: CMakeLists.txt  main.cc
